vlib/v/checker/tests/immutable_array_struct_assign.vv
struct Aaa {
pub mut:
	i []int
}

fn main() {
	a := Aaa{}
	a.i[0] += 3
}
